Simplify GUI tests and strengthen regression coverage